# Travis_integration_C-

./: .travis.yml  README.md
build-calculadora-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  calculadora  calculadora.cbp  cmake_install.cmake  rules.ninja
build-calculadora-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-89f663c413e771ad7238.json  cmakeFiles-v1-16b8c19c6e37dd37b212.json  cmakeFiles-v1-464aba1be42663b3c98a.json  codemodel-v2-54ad31c0a095207a8849.json  codemodel-v2-ccbe173570f8bc02e8e4.json  index-2020-05-21T05-28-20-0348.json  index-2020-05-21T06-35-45-0920.json  index-2020-05-21T14-47-28-0208.json  target-calculadora-Debug-9c4c816ce36bddcfdd71.json  target-calculadora-Debug-c50c9fe595a068abed45.json
calculadora/: .gitignore  CMakeLists.txt  Makefile  calculadora.cpp  calculadora.hpp  main.cpp
